# cultural-scraper

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  index.html  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
cultural_scraper/cli/: main.py
cultural_scraper/config/: config.yaml
cultural_scraper/core/: __init__.py  enums.py  scraper_base.py
cultural_scraper/data/: __init__.py  ateneu_scraper.py  biblioteques_scraper.py  cccb_scraper.py  example_scraper.py  guia_scraper.py  manager.py  timeout_scraper.py
cultural_scraper/filters/: __init__.py  filters.py
cultural_scraper/formatter/: __init__.py  html.py  markdown.py
cultural_scraper/utils/: __init__.py  common.py
docs/: index.html
output/: 03-2026.html  04-2026.html  25-03-2026.html  26-03-2026.html  27-03-2026.html  30-03-2026.html
