[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cultural-scraper"
version = "0.1.0"
description = "Web scraper for weekly cultural plans"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "lxml>=4.9.0",
]

[project.scripts]
cultural-scraper = "cultural_scraper.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
pretty = true

[tool.pre-commit]
default_stages = ["pre-commit"]

[tool.pre-commit.hooks]
ruff = { entry = "ruff", args = ["check"] }
ruff-format = { entry = "ruff", args = ["format", "--check"] }
